/*
 * Copyright 2026 polygraphene
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package keyattest;

service KeyAttest {
    rpc GenerateKey(GenerateKeyRequest) returns (GenerateKeyResponse);
}

message GenerateKeyRequest {
    bytes generate_key_parcel = 1;
    bytes app_id = 2;
}

message GenerateKeyResponse {
    bytes generate_key_result_parcel = 1;
    bool intercept = 2;
    bytes key_blob = 3;
    bool has_error = 4;
    bytes error_response = 5;
}
